import configureStore from 'redux-mock-store';
import thunk from 'redux-thunk';
import fetchMock, { enableFetchMocks } from 'jest-fetch-mock';
import initialExperimentsState, { experimentTemplate } from '../../../../redux/reducers/experiments/initialState';
import initialProjectsState, { projectTemplate } from '../../../../redux/reducers/projects/initialState';
import loadBackendStatus from '../../../../redux/actions/backendStatus/loadBackendStatus';

import {
  EXPERIMENT_SETTINGS_PIPELINE_START,
  EXPERIMENT_SETTINGS_INFO_UPDATE,
} from '../../../../redux/actionTypes/experimentSettings';

import {
  BACKEND_STATUS_ERROR, BACKEND_STATUS_LOADED,
} from '../../../../redux/actionTypes/backendStatus';

import { runGem2s } from '../../../../redux/actions/pipeline';

const mockStore = configureStore([thunk]);
enableFetchMocks();

jest.mock('../../../../redux/actions/backendStatus/loadBackendStatus',
  () => jest.fn().mockImplementation(() => async () => { }));

const experimentId = 'experiment-id';
const projectId = 'project-id';

const initialState = {
  backendStatus: {
    [experimentId]: {
      status: {
        gem2s: {
          status: 'NOT_CREATED',
        },
      },
    },
  },
  experiments: {
    ...initialExperimentsState,
    [experimentId]: {
      ...experimentTemplate,
      name: 'Mock experiment',
      id: experimentId,
      projectUuid: projectId,
      sampleIds: ['sample-1', 'sample-2'],
    },
  },
  projects: {
    ...initialProjectsState,
    [projectId]: {
      ...projectTemplate,
      name: 'Mock project',
      samples: ['sample-1', 'sample-2'],
    },
  },
};

describe('runGem2s action', () => {
  beforeEach(() => {
    const response = new Response(JSON.stringify({}));

    fetchMock.resetMocks();
    fetchMock.doMock();
    fetchMock.mockResolvedValueOnce(response);
  });

  afterEach(() => {
    jest.clearAllMocks();
  });

  it('Dispatches events properly', async () => {
    const store = mockStore(initialState);
    await store.dispatch(runGem2s(experimentId));

    const actions = store.getActions();

    expect(actions[0].type).toEqual(BACKEND_STATUS_LOADED);
    expect(actions[1].type).toEqual(EXPERIMENT_SETTINGS_PIPELINE_START);

    expect(actions[2].type).toEqual(EXPERIMENT_SETTINGS_INFO_UPDATE);
    expect(actions).toMatchSnapshot();
  });

  it('Dispatches status error if loading fails', async () => {
    fetchMock.resetMocks();
    fetchMock.mockResponse(JSON.stringify({ message: 'some weird error that happened' }), { status: 400 });

    const store = mockStore(initialState);
    await store.dispatch(runGem2s(experimentId));

    const actions = store.getActions();

    expect(loadBackendStatus).not.toHaveBeenCalled();
    expect(actions[0].type).toEqual(BACKEND_STATUS_LOADED);
    expect(actions[1].type).toEqual(BACKEND_STATUS_ERROR);

    expect(actions).toMatchSnapshot();
  });
});
